package application;

import model.services.menus.MainMenu;

public class Program {
    public static void main(String[] args) {
        MainMenu mainMenu = new MainMenu();
        mainMenu.show();

    }
}