package model.exceptions;

public class AccountManagementException extends Exception{

    public AccountManagementException(String msg){
        super(msg);
    }
}
